--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 
         <section class="final">
             <h2>ВМЕСТЕ С ТОБОЙ МЫ ДОБЬЕМСЯ ВСЕГО!</h2>
+            <p class="hint"># не забывай про нежности #</p>
         </section>
     </main>
     </div>
